--- a/package.json
+++ b/package.json
@@ -4,11 +4,20 @@
   "description": "combine scripts",
   "main": "index.js",
   "bin": "bin/index.js",
-  "scripts": {},
+  "scripts": {
+    "lint": "eslint ./bin/"
+  },
   "author": "Mr.Betty<guoxiang191@gmail.com>",
   "license": "ISC",
   "dependencies": {
     "async": "^2.6.0",
     "request": "^2.83.0"
+  },
+  "devDependencies": {
+    "@joyeecheung/eslint-config-node-core": "^1.1.0",
+    "@joyeecheung/eslint-plugin-node-core": "^1.0.0",
+    "babel-eslint": "^8.2.1",
+    "eslint": "^4.16.0",
+    "eslint-plugin-markdown": "^1.0.0-beta.6"
   }
 }
